# platanus-hack-26-mx-team-16

./: .gitignore  .mcp.json  AGENTS.md  CHEATSHEET.md  CLAUDE.md  DESIGN.md  Makefile  PROD-READINESS-AUDIT.md  PRODUCT.md  README.md  docs-view.yml  justfile  owliver-design.pen  owliver-frontend.md  package-lock.json  phase-catalog.json  platanus-hack-project.jsonc  project-description.md  skills-lock.json  spec-gaps.md  spec.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.scanners  Makefile  README.md  alembic.ini  command.py  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scanners.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  run-script  run_worker.py  ty.toml
backend/admin/: .gitignore  Dockerfile
backend/config/: __init__.py  lifespan.py  main.py  monitoring.py  router.py  tasks.py
backend/demo/planted_bot/: README.md  app.py
backend/docker/: commands  entrypoint  start-dev  start-prod  start-prod-worker  start-temp-worker
backend/fixtures/: gob_mx.txt  leaderboard_seed.json
backend/fixtures/admin/: README.md  directus_collections.sql  directus_fields.sql
backend/fixtures/document_types/: cedula_identidad.json
backend/fixtures/pipelines/: standard_extraction.json
backend/fixtures/templates/: circular_judicial.json  pedidos_multicanal.json
backend/scripts/: install_scanners.sh  seed_common.py  seed_users.py  seed_workflows.py  warm_scanners.sh
backend/scripts/fixtures/: doctypes.json  industries.json  processes.json
backend/scripts/spec/: __init__.py  __main__.py  cli.py  emitter.py  extractor.py  models.py  openapi_types.py  pyproject.toml
backend/src/admin/presentation/: router.py
backend/src/auth/domain/: exceptions.py
backend/src/auth/infrastructure/: bus_wiring.py
backend/src/auth/presentation/: router.py
backend/src/common/: constants.py  settings.py
backend/src/common/database/: config.py  env.py
backend/src/common/infrastructure/: bus_builder.py  context_builder.py  domain_builder.py  error_handlers.py  event_bus.py  event_publisher.py  lambdas.py  storage_backends.py
backend/src/common/presentation/: pagination.py  router.py
backend/src/connections/domain/: exceptions.py
backend/src/connections/presentation/: router.py
backend/src/dashboard/presentation/: router.py
backend/src/evals/application/: metrics.py
backend/src/evals/presentation/: router.py
backend/src/industries/presentation/: router.py
backend/src/scanning/: __init__.py  egress.py  evidence.py  health.py  registry.py  resolver.py  robots.py  runner.py  watchdog.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  conftest_owliver.py  test_alerts.py  test_cancel_share.py  test_enqueue_scan.py  test_findings.py  test_get_scan_idor.py  test_login.py  test_logout.py  test_ranking_health.py  test_refresh.py  test_scan_stream.py  test_session.py  test_users.py  test_watchlist.py
backend/tests/common/: test_cursor_pagination.py  test_touch.py
backend/tests/dashboard/: conftest.py
backend/tests/legal/: test_attestation.py  test_host_classification.py  test_passive_profile.py  test_rate_limit.py  test_robots_and_ua.py  test_scheduler_passive.py  test_visibility.py
backend/tests/scanning/: conftest.py  test_egress.py  test_evidence.py  test_hexstrike_flag.py  test_resolver_passive.py  test_robots.py  test_run_tool.py  test_watchdog.py
backend/tests/staff/: conftest.py
(+2540 files in other folders)
